[gd_scene load_steps=16 format=2]

[ext_resource path="res://enemies/BaseEnemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://enemies/basic/sprites/enemy-basic-dark.png" type="Texture" id=2]
[ext_resource path="res://enemies/common/sprites/explosion_3/explosion.png" type="Texture" id=3]
[ext_resource path="res://enemies/basic/BasicEnemyDark.gd" type="Script" id=10]
[ext_resource path="res://enemies/basic/beams/EnemyDarkBeam.tscn" type="PackedScene" id=11]

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 16 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 43.5, 16.5 )

[node name="BasicEnemyDark" instance=ExtResource( 1 )]
script = ExtResource( 10 )
health_points = 3
movement_speed = 170.0
beam_scene = ExtResource( 11 )

[node name="AnimatedSprite" parent="." index="0"]
scale = Vector2( 3.2, 3.2 )
frames = SubResource( 8 )
playing = true

[node name="ExplosionAnimation" parent="." index="1"]
frames = SubResource( 5 )

[node name="Area2D" parent="." index="2"]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" parent="Area2D" index="0"]
position = Vector2( 0, 4.5 )
shape = SubResource( 9 )

[node name="TimeToShoot" parent="." index="3"]
wait_time = 1.1
autostart = true

[connection signal="animation_finished" from="ExplosionAnimation" to="." method="_on_ExplosionAnimation_animation_finished"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="TimeToShoot" to="." method="_on_TimeToShoot_timeout"]
